[project]
name = "scoptrial"
version = "0.1.2"
description = ""
authors = [
    {name = "mikiokubo", email = "kubo@kaiyodai.ac.jp"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.1.4",
    "plotly>=4.13.0",
    "matplotlib>=3.3.3",
    "nbdev>=1.1.5",
    "jupyterlab>=2.2.9",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
